# LLMs_Evaluation

./: .gitignore  README.md  pyproject.toml
src/: api.py  class.py  eval.py  results.json  results_with_classification.json  test_examples.json  tests.py  utils.py
